update incorrect typos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -141,7 +141,7 @@
             Krugurt
           </span>
 
-          Sigmoid Neuron Network
+          Sigmoid Neural Network
 
           <y class="text-sm">
 
