--- a/src/views/index.html
+++ b/src/views/index.html
@@ -147,15 +147,21 @@
 
             Based on the image average RGB color is
 
-            <span class="underline"
+            <span class="font-semibold"
                   id="textRgb">
             </span>,
 
             then predicted text color is
 
-            <span class="underline"
+            <span class="font-semibold uppercase"
                   id="textResult">
-            </span>.
+            </span>,
+
+            the neural network output result is
+
+            <span class="font-semibold"
+                  id="textNnResult">
+            </span>
 
           </y>
 
@@ -173,8 +179,8 @@
       <y class="relative p-10">
 
         <img class="adaptive w-full h-auto rounded shadow-lg overflow-hidden"
-             src="assets/image/low/dummy/pexels-photo-3597111.jpeg"
-             data-src="assets/image/high/dummy/pexels-photo-3597111.jpeg"
+             src="assets/image/low/dummy/pexels-photo-3619784.jpeg"
+             data-src="assets/image/high/dummy/pexels-photo-3619784.jpeg"
              id="imageInput">
 
         <y class="absolute top-0 left-0 p-20">
