--- a/src/views/index.html
+++ b/src/views/index.html
@@ -157,7 +157,7 @@
                   id="textResult">
             </span>,
 
-            the neural network output result is
+            the neural network output score is
 
             <span class="font-semibold"
                   id="textNnResult">
@@ -179,8 +179,8 @@
       <y class="relative p-10">
 
         <img class="adaptive w-full h-auto rounded shadow-lg overflow-hidden"
-             src="assets/image/low/dummy/pexels-photo-3619784.jpeg"
-             data-src="assets/image/high/dummy/pexels-photo-3619784.jpeg"
+             src="assets/image/low/dummy/pexels-photo-3473492.jpeg"
+             data-src="assets/image/high/dummy/pexels-photo-3473492.jpeg"
              id="imageInput">
 
         <y class="absolute top-0 left-0 p-20">
